2004-08-09 Bogdan Gheorghe
	Fix for Bug 71115: Double Indexing
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
2004-08-06 Vladimir Hirsl

	A small parser Problem fix after String to char[] optimization.
	* parser/org/eclipse/cdt/internal/core/parser/problem/Problem.java

2004-08-06 Chris Wiebe

	Add scheduling rule to CoreModel.run
	* src/org/eclipse/cdt/core/model/CoreModel.java

2004-07-30 Alain Magloire

	Add the Using-{directive,declaration} part of the Core Model.

	* model/org/eclipse/cdt/core/model/IUsing.java
	* model/org/eclipse/cdt/internal/core/model/CElement.java
	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java
	* model/org/eclipse/cdt/internal/core/model/Using.java
	
2004-07-28 Tanya Wolff

	Fix for PR 70161: Assembly untranslated in C++ File Types
	* plugin.properties
	* plugin.xml

2004-07-26 Vladimir Hirsl

	HP-UX SOM Binary parser patch

	* utils/org/eclipse/cdt/utils/com/SOM.java

2004-07-20 Alain Magloire
	Fix for PR 70449
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java

2004-07-16 Alain Magloire

	Fix for PR 70255

	* model/org/eclipse/cdt/internal/core/model/Binary.java

2004-07-16 Brad Jarvinen

	Fix Pr 70252

	* src/org/eclipse/cdt/internal/errorparsers/GCCErrorParser.java

2004-07-16 Vladimir Hirsl
	1. Implementation of HP-UX SOM binary parser.
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/som/SOM.java
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/som/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMParser.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SomSymbol.java