@@ -82,6 +82,10 @@ public interface ICProject extends IParent, IOpenable, ICElement {
 	 */
 	ISourceRoot getSourceRoot(ISourceEntry entry) throws CModelException;
 
+	ISourceRoot findSourceRoot(IResource resource);
+	
+	ISourceRoot findSourceRoot(IPath path);
+
 	/**
 	 * Return the output entries.
 	 * 
@@ -101,6 +105,12 @@ public interface ICProject extends IParent, IOpenable, ICElement {
 	 * @return
 	 */
 	boolean isOnSourceRoot(IResource resource);
+
+	/**
+	 * @param element
+	 * @return
+	 */
+	boolean isOnSourceRoot(ICElement element);
 
 	/**
 	 * Return the library references for this project.
