@@ -1,3 +1,9 @@
+2004-08-13 Chris Wiebe
+
+	Add findSourceRoot() method needed for class wizard
+	* model/org/eclipse/cdt/core/model/ICProject.java
+	* model/org/eclipse/cdt/internal/core/model/CProject.java
+	
 2004-08-09 Bogdan Gheorghe
 	Fix for Bug 71115: Double Indexing
 	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
